<resources>
    <string name="app_name">LocalSale</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_register">register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_login_in">Login in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_button">Register</string>
    <string name="money_text">￥0</string>
    <string name="least_money_string">¥30起送</string>
    <string name="item_picture">item picture</string>
    <string name="shoppinglist">ShoppingList</string>
    <string name="shopping_trolley">Shopping trolley</string>
    <string name="user_info">user_info</string>
    <string name="edit_address">修改信息</string>
    <string name="choose_picker">选择配送地点</string>
    <string name="time_picker">请选择配送时间</string>
</resources>
